--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -101,14 +101,6 @@ p {
   color: white;
 }
 
-.btn-l {
-  border-radius: 10.5px !important;
-}
-
-.ih {
-  color: var(--text-third) !important;
-}
-
 .foto-c {
   max-height: 400px;
 }
@@ -146,12 +138,6 @@ fa-icon {
   color: var(--text-secundary) !important;
 }
 
-.box {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
 /* Cards */
 
 #sobrenos > .container > .card-deck > .card {
@@ -174,10 +160,6 @@ footer {
   background: whitesmoke;
   color: var(--text-primary);
   box-shadow: 0px -1px 5px 0px rgba(0, 0, 0, 0.137);
-}
-
-.arrumarp {
-  margin: 0.1rem !important;
 }
 
 .footer-bottom {
@@ -215,38 +197,27 @@ footer {
   padding-top: 1rem;
 }
 
-.top-padding2 {
-  padding-top: 2rem;
-}
-
 .top-padding4 {
   padding-top: 4.5rem;
-}
-
-.top-padding6 {
-  padding-top: 6rem;
-}
-
-.top-padding8 {
-  padding-top: 8rem;
 }
 
 .top-padding10 {
   padding-top: 10rem;
 }
 
-.bottom-margin {
-  margin-bottom: 2rem;
-}
-
 /* Celular */
 
 @media only screen and (max-width: 576px) {
+  .row {
+    flex-direction: column;
+  }
+
   .img-center {
     place-content: center;
   }
 
   .foto-footer {
+    align-self: center;
     min-height: 100px;
     max-width: 200px;
     margin-bottom: 20px;
